--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,44 +1,28 @@
 /* !!! подключить шрифт для h2 font-family: 'Gilroy-Bold'; */
 /* !!! подключить шрифт для основного текста font-family: 'Gilroy-Regular' */
 
-
-/* !! подумать, как сделать так, чтоб background был на всю длину экрана , а не ширину секции, как в макете */
 .aboutUs {
-	/* max-height: 540px; */
-	/* ширина макета: 1920px; */
-	background: url('../img/about_us/bg.png') center center/cover no-repeat;
+	background: url('../img/about_us/bg.png') center center/cover;
 	background-color: #FAFAFA;
 	position: relative;
 }
 
-.aboutUs .vector1 {
-	position: absolute;
-	border: 2px solid #F0F0F0;
-	transform: rotate(2.09deg);
-}
-
-.aboutUs .vector2 {
-	position: absolute;
-	border: 2px solid #F0F0F0;
-	transform: matrix(1, 0.04, 0.04, -1, 0, 0);
+.aboutUs .aboutUs_img img {
+	max-width: 100%;
 }
 
 .aboutUs .row {
 	display: flex;
     align-items: center;
 }
-.aboutUs .aboutUs_text {
-	/* margin: 127px 0 124px 0; */
-}
 
 .aboutUs .text {
-	margin-bottom: 35px;
 	color: #666666;
 	width: 515px;
 	font-family: 'Gilroy-Regular';
 	font-size: 16px;
-	line-height: 150%;
 	text-align: justify;
+	margin-bottom: 35px;
 }
 
 /* повторяющийся элемент на странице */
@@ -64,6 +48,82 @@ button {
 	font-size: 15px;
 	line-height: 18px;
 }
+
+
+/* Block Features */
+.features {
+	background-color: #FFFFFF;
+}
+
+.features .features_wrapper {
+	padding: 100px 29px 100px 29px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.features .features_wrapper .features_item {
+	width: 310px;
+	transition: 0.2s all;
+}
+
+.features .features_wrapper .features_item:hover {
+	padding: 40px 30px 25px 30px;
+	box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+}
+
+.features .features_wrapper .features_item .feature_icon {
+	width: 70px;
+	height: 70px;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	border-radius: 15px;
+	margin-bottom: 25px;
+}
+
+.coral {
+	background-color: rgba(242, 88, 34, 0.25);
+}
+
+.green {
+	background-color: rgba(20, 146, 17, 0.28);
+}
+
+.yellow {
+	background-color: rgba(255, 205, 29, 0.24);
+}
+
+.features .features_wrapper .features_item .features_title {
+	font-family: 'Gilroy-Bold';
+	font-size: 24px;
+	/* line-height: 28px; */
+	color: #000000;
+	margin-bottom: 17px;
+}
+
+.features .features_wrapper .features_item .features_text {
+	font-family: 'Gilroy-Regular';
+	font-size: 15px;
+	line-height: 22px;
+	color: #666666;
+	margin-bottom: 25px;
+}
+
+.features .features_wrapper .features_item .features_more {
+	font-family: 'Gilroy-Bold';
+	font-size: 11px;
+	font-weight: bold;
+	color: #000000;
+}
+
+.features .features_wrapper .features_item .features_more:hover {
+	color: #666666;
+}
+
+
+
+
+
 
 
 
