--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,79 @@
 /* !!! подключить шрифт для h2 font-family: 'Gilroy-Bold'; */
 /* !!! подключить шрифт для основного текста font-family: 'Gilroy-Regular' */
+/* !!! подключить шрифт для навигации font-family: 'Gilroy-SemiBold' и font-family: 'Gilroy-Medium'  */
+
+
+/* ! подумать над тем, чтоб сделать меню fixed или еще как-то обыграть */
+.header {
+	margin-top: 40px;
+}
+
+.header .container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.header .logo_wrp img {
+	max-width: 100%;
+}
+
+/* убрать за ненадобностью, если не будет использоваться */
+.header .header_nav {
+}
+
+.header .header_nav .header_menu {
+	display: flex;
+	list-style-type: none;
+	align-items: center;
+	margin-bottom: 0px;
+}
+
+.header .header_nav .header_menu li {
+	margin-right: 34px;
+}
+
+/* подумать */
+.header .header_nav .header_menu li:last-child a {
+	margin-right: 0px;
+	display: flex;
+	width: 120px;
+	height: 40px;
+	background-color: #F25822;
+	border: none;
+	border-radius: 30px;
+	color: #FFFFFF;
+	font-family: 'Gilroy-SemiBold';
+	font-size: 12px;
+	line-height: 14px;
+	align-items: center;
+	justify-content: center;
+}
+
+/* подумать над эффектом при наведении на него мышкой */
+.header .header_nav .header_menu li:last-child a:hover {
+}
+
+.header .header_nav .header_menu li > a {
+	color: rgba(0, 0, 0, 1);
+	font-family: 'Gilroy-Medium';
+	font-size: 14px;
+	line-height: 16px;
+}
+
+/*! когда буду делать JS, изменить поведение - удалять активный с предыдущей ссылки и добавлять на выбранную */
+.header .header_nav .header_menu li .active {
+	color: #F25822;
+	font-family: 'Gilroy-SemiBold';
+	font-weight: bold;
+}
+
+.header .header_nav .header_menu li > a:hover {
+	color: #F25822;
+	font-family: 'Gilroy-SemiBold';
+	font-weight: bold;
+	text-decoration: none;
+}
 
 .aboutUs {
 	background: url('../img/about_us/bg.png') center center/cover;
