--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,181 @@
-/* !!! подключить шрифт для h2 font-family: 'Gilroy-Bold'; */
-/* !!! подключить шрифт для основного текста font-family: 'Gilroy-Regular' */
-	
+/* TODO: подключить шрифт для h2 font-family: 'Gilroy-Bold'; */
+/* TODO: подключить шрифт для основного текста font-family: 'Gilroy-Regular' */
+/* TODO: подключить шрифт для навигации font-family: 'Gilroy-SemiBold' и font-family: 'Gilroy-Medium'  */
+
+
+/* NOTE: подумать над тем, чтоб сделать меню fixed или еще как-то обыграть */
+
+/* HOME PAGE block -- */
+.homePage
+	min-height: 700px
+	// padding-top: 40px
+.header
+	padding-top: 40px 
+	&_wrp 
+		display: flex 
+		justify-content: space-between 
+		align-items: center 
+	.logo_wrp img 
+		max-width: 100% 
+	// &_nav  NOTE: убрать за ненадобностью, если не будет использоваться
+	&_menu 
+		display: flex
+		list-style-type: none
+		align-items: center
+		margin-bottom: 0px
+		li 
+			margin-right: 34px
+			a
+				color: rgba(0, 0, 0, 1)
+				font-family: 'Gilroy-Medium'
+				font-size: 14px
+				line-height: 16px
+			&:last-child 
+				margin-right: 0px 
+				a 
+					display: flex 
+					width: 120px 
+					height: 40px 
+					background-color: #F25822 
+					border: none 
+					border-radius: 30px 
+					color: #FFFFFF 
+					font-family: 'Gilroy-SemiBold' 
+					font-size: 12px 
+					line-height: 14px 
+					align-items: center 
+					justify-content: center
+					&:hover
+						color: #F25822 
+						font-size: 13px 
+						background-color: rgba(242, 89, 34, 0.3) 
+						border: 1px solid #F25822
+						text-decoration: none
+					/* NOTE: подумать над эффектом при наведении на него мышкой - последний элемент кнопка в навигации */
+			/* TODO: когда буду делать JS, изменить поведение - удалять активный .active с предыдущей ссылки и добавлять на выбранную */
+			.active 
+				color: #F25822 
+				font-family: 'Gilroy-SemiBold' 
+				font-weight: bold 
+			& > a 
+				&:hover 
+					color: #F25822 
+					font-family: 'Gilroy-SemiBold' 
+					font-weight: bold 
+					text-decoration: none 
+					/* NOTE: подумать над тем, как убрать эффект прыгающей строки, когда наводишь на элементы меню */
+
+
+.home 
+	position: relative
+	&_wrp 
+		padding-top: 143px 
+		width: 543px 
+		h1 
+			font-family: 'Gilroy-Bold' 
+			font-size: 60px 
+			line-height: 70px 
+			color: #000000 
+			.ellipse 
+				position: relative 
+				&::after 
+					display: block 
+					content: '' 
+					box-sizing: border-box 
+					border: 1px solid #F25822 
+					border-radius: 50% 
+					width: calc(100% + 42px) 
+					height: calc(100% + 10px) 
+					position: absolute 
+					top: 50% 
+					left: 50% 
+					transform: translateX(-50%) translateY(-50%)
+	&_text
+		max-width: 466px
+		margin-top: 17px
+		color: #888888
+		font-family: 'Gilroy-Medium'
+		font-size: 20px
+		line-height: 23px
+	.interactive
+		margin-top: 37px
+		width: 302px
+		display: flex
+		align-items: center
+		.start_btn
+			display: flex
+			width: 140px
+			height: 50px
+			margin-right: 27px
+			background: #F25822
+			border: none
+			box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.2)
+			border-radius: 50px
+			color: #FFFFFF
+			font-family: 'Gilroy-Bold'
+			font-size: 15px
+			align-items: center 
+			justify-content: center
+			&:hover
+				color: #F25822 
+				font-size: 17px 
+				background-color: rgba(242, 89, 34, 0.3) 
+				border: 1px solid #F25822
+				text-decoration: none
+		.watch
+			display: flex
+			align-items: center
+			width: 135px
+			height: 30px
+			transition: 0.5s all
+			&:hover
+				.watch_round
+					transform: scale(1.2)
+					img
+						transform: scale(1.2)
+				.watch_descr
+					color: #7f7f7f
+					font-weight: bold
+				/* NOTE: подумать над эффектом ховера в этом блоке */
+			&_round
+				display: flex
+				width: 30px
+				height: 30px
+				justify-content: center
+				align-items: center
+				border: 3px solid #DDDDDD
+				border-radius: 100%
+				margin-right: 15px
+			&_descr
+				color: #AAAAAA
+				font-family: 'Gilroy-Bold'
+				font-size: 15px
+				transition: 0.2s all
+	&_picture
+		position: absolute
+		left: 570px
+		top: 40px
+		// img
+		// 	width: 100%
+
+.brands
+	height: 243px 
+	padding: 97px 0
+	background: #FFFFFF
+	&_wrp
+		height: 50px
+		display: flex
+		justify-content: space-between
+					
+
+
+
+
+
+
+
+/* -- end HOME PAGE block */
+
 .aboutUs 
 	background: url('../img/about_us/bg.png') center center/cover 
 	background-color: #FAFAFA 
@@ -49,7 +224,8 @@ button
 		width: 310px 
 		transition: 0.2s all 
 		&:hover 
-			padding: 40px 30px 25px 30px 
+			// padding: 20px 10px
+			transform: scale(1.1) 
 			box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06) 
 	&_icon 
 		width: 70px 
